# sos

./: .env.example  CHANGELOG.md  CLAUDE.md  Makefile  NEWS.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
claude-artifacts/: README.md
claude-artifacts/commands/: goal-10x.md  goal.md
claude-artifacts/skills/: future-self.md
claude-artifacts/skills/copilotkit/.claude-plugin/: plugin.json
claude-artifacts/skills/copilotkit/scripts/: scaffold.sh
docs/: goal-10x.md
docs/plans/: 2026-06-20-001-feat-knowledgefy-skill-plan.md
plugins/sos/: README.md
plugins/sos/.claude-plugin/: plugin.json
plugins/sos/commands/: goal-10x.md  ship-loop.md
plugins/sos/scripts/: install-doc-sync.sh  install-goal-10x.sh  install-skills-global.sh
plugins/sos/skills/copilotkit/: SKILL.md  examples.md  reference.md
plugins/sos/skills/dreammaketrue/: SKILL.md
plugins/sos/skills/enduser-webtest/: SKILL.md
plugins/sos/skills/free-llm/: SKILL.md
plugins/sos/workflows/: goal-10x.js
skills/email-reader/: .env.example  README.md  SKILL.md  gmail_imap.py  test_gmail_imap.py
specs/: cli_spec.json  module_spec.json  services_spec.json
src/: local_llm_fallback.py
tests/: test_config_loader.py  test_gateway_watchdog.py  test_local_llm_fallback.py
tests/e2e_framework/: README.md  __init__.py  api.py  assertions.py  fixtures.py
tools/: __init__.py  evaluator.py  observer.py  reporter.py  verify.py
tools/linkedin-publisher/: README.md  pyproject.toml  run.sh
tools/linkedin-publisher/examples/: day10_article.md
tools/linkedin-publisher/examples/day10_output/: INSTRUCTIONS.md  linkedin_body.txt  publish_bundle.js
tools/linkedin-publisher/linkedin_publisher/: __init__.py  cli.py  extract.py  images.py  preprocess.py  publish.py
tools/linkedin-publisher/tests/: test_extract.py  test_images.py  test_preprocess.py  test_publish.py
(+25 files in other folders)
